--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 2.8)
 project (jdksall)
 add_subdirectory("jdksavdecc-c")
 add_subdirectory("microsupport")
+add_subdirectory("pools")
 add_subdirectory("jdksnet")
 add_subdirectory("jdksmaap")
 add_subdirectory("jdksgptp")
